--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -1,13 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:gravity="center"
     android:layout_height="match_parent"
+
     tools:context="com.example.userpc.android_app.Actions">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+  <Button
+      android:id="@+id/pic_clic_btn"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="30dp"
+      android:text="Click Picture"/>
 
-</FrameLayout>
+</LinearLayout>
