--- a/app/src/main/res/layout/fragment_details_frag.xml
+++ b/app/src/main/res/layout/fragment_details_frag.xml
@@ -1,5 +1,5 @@
 <LinearLayout
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -38,7 +38,7 @@
             android:layout_marginLeft="20dp"
 
             android:layout_marginRight="66dp"
-            android:text="a. Age"/>
+            android:text="b. Age"/>
 
         <EditText
             android:id="@+id/age"
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="31dp"
-            android:text="a. Address"/>
+            android:text="c. Address"/>
 
         <EditText
             android:id="@+id/address"
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="42dp"
-            android:text="a. Gender"/>
+            android:text="d. Gender"/>
 
         <EditText
             android:id="@+id/gender"
