--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -15,6 +15,7 @@
     </com.example.userpc.android_app.Graph_view>
 
     <Button
+        android:layout_marginTop="100dp"
         android:id="@+id/reset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
